add necessary fixes

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h2>Today's Productivity</h2>
-  <div id="stats"></div>
-  <button id="analyzeBtn">Get AI Insights</button>
-  <div id="aiResult"></div>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h2>Today's <span id="title">Productivity</span></h2>
+    <div id="stats"></div>
+    <button id="analyzeBtn">Get AI Insights</button>
+    <div id="loader" style="display: none; margin-top: 10px">
+      <div class="spinner"></div>
+      <p>Analyzing your productivity...</p>
+    </div>
+    <div id="aiResult"></div>
 
-  <script src="popup.js"></script>
-</body>
+    <script src="popup.js"></script>
+  </body>
 </html>
